--- a/index.html
+++ b/index.html
@@ -24,5 +24,30 @@
       <img class="about__image" src="img/solar-panel.png">
     </div>
   </section>
+  <section class="form">
+    <div class="form__container">
+      <h1>Оставьте свои контакты</h1>
+      <p>Поможем подобрать модель.<br>Выбрать удобный вариант доставки и установки.<br>Гарантия возврата денег.</p>
+      <form>
+        <div class="form__group">
+          <label for="name">Ваше имя</label>
+          <input type="text" placeholder="Введите имя" id="name">
+        </div>
+        <div class="form_group">
+          <label for="email">Электронный адрес</label>
+          <input type="email" placeholder="***@yandex.ru" id="email">
+        </div>
+        <div class="form_group">
+          <label for="phone">Номер телефона</label>
+          <input type="tel" placeholder="7 (999) 999-99-99" id="phone">
+        </div>
+        <div class="form_group">
+          <label for="budget">Примерный бюджет</label>
+          <select type="tel" id="budget">
+        </div>
+        <button type="submit" class="form__submit">Отправить заявку</button>
+      </form>
+    </div>
+  </section>
 </body>
 </html>
