--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
         <div class="form_group">
           <label for="budget">Примерный бюджет</label>
           <select type="tel" id="budget">
+            <option>Выберите вариант</option>
+            <option value="10–30">10 000₽ – 30 000₽</option>
+            <option value="30–60">30 000₽ – 60 000₽</option>
+            <option value="60–100">60 000₽ – 100 000₽</option>
+            <option value="100+">100 000₽</option>
+          </select>
         </div>
         <button type="submit" class="form__submit">Отправить заявку</button>
       </form>
